fixed comment collapsed color, tried to make an empty description not take up space in the comment view card

--- a/app/views/comment/comment.css
+++ b/app/views/comment/comment.css
@@ -72,7 +72,7 @@
 }
 
 .indent-color {
-  width: 2;
+  width: 3;
   opacity: 0.5;
   margin-right: 7;
 }
